provisioning/jenkins/helm/jenkins-ingress.yaml
# Jenkins Ingress (External Access)
# Jenkins를 외부에서 접근하기 위한 Ingress 설정
#
# ⚠️ NOTE: install.sh에서 sed 명령으로 k8s_project와 k8s_domain을 치환합니다
# 실제 적용된 호스트: jenkins.drillquiz.com
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: jenkins.default.k8s_project.k8s_domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
  tls:
  - hosts:
    - jenkins.default.k8s_project.k8s_domain
    secretName: jenkins-ingress-tls
